--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,6 +32,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="="col">DELETE</th>
         </tr>
       </thead>
       <tbody>
@@ -39,6 +40,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><form method="POST" action="urls/<%=url%>/delete"> <button>DELETE</button></form> </td>
           </tr>
         <% } %>
       </tbody>
