Added an edit button, via POST method

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,20 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-success">
+
+      
+
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+
+          
+        </div>
+      </div>
+    </nav>
+  </header>
       </div>
     </div>
   </nav>
