--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,7 +32,10 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
-          <th scope="="col">DELETE</th>
+          <th scope="=col">Edit</th>
+          <th scope="=col">Delete</th>
+
+
         </tr>
       </thead>
       <tbody>
@@ -40,7 +43,9 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><form method="POST" action="urls/<%=url%>/delete"> <button>DELETE</button></form> </td>
+            <td><form method="GET" action="urls/<%=url%>"> <button>Edit</button></form> </td>
+            <td><form method="POST" action="urls/<%=url%>/delete"> <button>Delete</button></form> </td>
+            
           </tr>
         <% } %>
       </tbody>
