Tinyapp created a log in and log out button, and display name

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,9 +8,49 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        
+      </div>
+
+      <!-- <form class="form-inline" action="/login" method="POST">
+        <div class="form-group mb-2">
+          <input class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form> -->
+
+     
+
+
+  <% if(username){ %>
+
+    <p><%=username%></p>
+    <form class="form-inline" action="/logout" method="POST">
+      <div class="form-group mb-2">
+        <button type="submit" class="btn btn-primary">Logout</button>
+      </div>
+    </form>
+        <% } else{ %>  
+          <form class="form-inline" action="/login" method="POST">
+            <div class="form-group mb-2">
+              <input class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div> 
+          </form>
+       <% } %>
+
+        
+
+      
+
+       
+      
         <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-success">
 
+        <!-- <p><%=username%></p> -->
+
+      
+      
       
 
       </button>
