--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,23 +10,11 @@
 </head>
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-success">
-          <a class="navbar-brand" href="/urls">TinyApp</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-item nav-link" href="/urls">My URLs</a>
-              <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-            </div>
-          </div>
-        </nav>
-      </header>
+  <%- include('partials/_header') %>
       
   <main style="margin: 1em;">
     <h3>My URLs</h3>
+
     <table class="table">
       <thead>
         <tr>
