--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -14,6 +14,8 @@
 
     <%- include('partials/_header') %>
 
+
+    <!-- creates an enter url button/function on the creating a new url page, method is post -->
     <main style="margin: 1em;">
       <h3>Create TinyURL</h3>
       <form class="form-inline" action="/urls" method="POST">
