--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,6 +9,7 @@
 
     <%- include('partials/_header') %>
   
+    <!-- displays long url and short url -->
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
