--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -26,7 +26,7 @@
     <p><%=username%></p>
     <form class="form-inline" action="/logout" method="POST">
       <div class="form-group mb-2">
-        <button type="submit" class="btn btn-primary">Logout</button>
+        <button type="submit" class="btn btn-primary" class="text-right" > Logout</button>
       </div>
     </form>
         <% } else{ %>  
