--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,6 +8,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/register">Register</a>
         
       </div>
 
@@ -23,17 +24,17 @@
 
   <% if(username){ %>
 
-    <p><%=username%></p>
+    <p>Logged in as <%=username%></p>
     <form class="form-inline" action="/logout" method="POST">
       <div class="form-group mb-2">
-        <button type="submit" class="btn btn-primary" class="text-right" > Logout</button>
+        <button type="submit" class="btn btn-primary"> Logout</button>
       </div>
     </form>
         <% } else{ %>  
           <form class="form-inline" action="/login" method="POST">
             <div class="form-group mb-2">
               <input class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Login</button>
             </div> 
           </form>
        <% } %>
@@ -45,7 +46,7 @@
        
       
         <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-success">
+
 
         <!-- <p><%=username%></p> -->
 
