added login function

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,12 +9,11 @@
 
     <%- include('partials/_header') %>
 
-    <main style="margin: 1em;">
-        <h3>Registration Page</h3>
-  
+
+    <h3>Login Page</h3>
 
       <div>
-        <form method="POST" action="/register">
+        <form method="POST" action="/login">
           
           
           <div>
@@ -25,15 +24,15 @@
               <label>Password</label>
               <input type="password" name="password" />
             </div>
-
-            <button class="btn btn-outline-info">Register</button>
+            
+            <button class="btn btn-outline-info">Login</button>
 
         </form> 
         
       </div>
       
   
-   
+    <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
