TinyApp Finished Product

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,45 +8,24 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <a class="nav-item nav-link" href="/register">Register</a>
-        <a class="nav-item nav-link" href="/login">Login</a>
       </div>
 
-
-
-
   <% if(user){ %>
-
    <p>Logged in as: <%= user.email %> </p>
     <form class="form-inline" action="/logout" method="POST">
       <div class="form-group mb-2">
-        <button type="submit" class="btn btn-primary"> Logout</button>
+        <button type="submit" class="btn btn-primary pull-right" > Logout</button>
       </div>
     </form>
         <% } else{ %>  
-     
+          <a class="nav-item nav-link" href="/register">Register</a>
+        <a class="nav-item nav-link" href="/login">Login</a>
        <% } %>
 
-        
-
-      
-
-       
-      
         <header>
-
-
- 
-
-      
-      
-      
-
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-
-          
+        <div class="navbar-nav">   
         </div>
       </div>
     </nav>
